<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_edit_alert_name"/>

    <EditText
        android:id="@+id/edit_alert_send_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_edit_alert_surname"/>

    <EditText
        android:id="@+id/edit_alert_send_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_edit_alert_patronymic"/>

    <EditText
        android:id="@+id/edit_alert_send_patronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_edit_alert_photo"/>

    <TextView
        android:id="@+id/text_alert_send_name_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/button_alert_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_alert_no"/>

    <Button
        android:id="@+id/button_alert_reshoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_edit_alert_reshoot"/>

    <Button
        android:id="@+id/button_alert_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_alert_yes"/>



</LinearLayout>