<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="10dp"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/liner_layout_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <androidx.camera.view.PreviewView
            android:id="@+id/preview_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/button_take_photo_camerax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_take_photo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_layout_info_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        >

    <ImageView
        android:id="@+id/image_activity_make_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/text_title_edittext_target"/>
    <EditText
        android:id="@+id/edit_text_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/text_title_response"/>

    <EditText
        android:id="@+id/edit_text_response"
        android:layout_width="match_parent"
        android:layout_height="160dp"/>

    <Button
        android:id="@+id/button_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_take_photo"/>
    </LinearLayout>




</LinearLayout>